<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:text="@string/report"
            android:textSize="20sp"
            android:textColor="#231f20" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            app:srcCompat="@drawable/ic_report_close"/>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvReports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="_regular"
        android:textSize="16sp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/additional"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:gravity="start"
        android:maxLines="4"
        android:ellipsize="end"
        android:background="@drawable/bg_report_text"
        android:fontFamily="_regular"
        android:hint="@string/write_here"
        android:inputType="text"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_submit_button_blue"
        android:padding="15dp"
        android:textColor="@color/white"

        android:gravity="center"
        android:layout_margin="20dp"
        />


</LinearLayout>